[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eds_pie"
version = "1.0.0"
description = "EDS parser library for ODVA's CIP® protocol family (EtherNet/IP®, DeviceNet®, etc.)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "omidbimo", email = "kompani.omid@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I"]

[tool.isort]
profile = "black"
